# fonts-dataset

./: .floydignore  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  pytest.ini
fonts_dataset/: cli.py
src/: cli.py  fonts_public_pb2.py
src/util/: curves.py
tests/: fonts_dataset_test.py
